--- a/src/main/resources/com/minyisoft/webapp/weixin/common/service/weixinConfig.properties
+++ b/src/main/resources/com/minyisoft/webapp/weixin/common/service/weixinConfig.properties
@@ -5,3 +5,4 @@ weixin.access_token_url=https://api.weixin.qq.com/cgi-bin/token?grant_type=clien
 weixin.oauth2.access_token_url=https://api.weixin.qq.com/sns/oauth2/access_token?appid={0}&secret={1}&code={2}&grant_type=authorization_code
 weixin.send_message_url=https://api.weixin.qq.com/cgi-bin/message/custom/send?access_token={0}
 weixin.send_template_message_url=https://api.weixin.qq.com/cgi-bin/message/template/send?access_token={0}
+weixin.get_user_info_url=https://api.weixin.qq.com/cgi-bin/user/info?access_token={0}&openid={1}&lang=zh_CN
